[gd_scene load_steps=3 format=3 uid="uid://cj1ipyjmimsuc"]

[ext_resource type="Script" uid="uid://dk6wrur3ee3fm" path="res://Scripts/login_page.gd" id="1_7rm6a"]
[ext_resource type="Texture2D" uid="uid://ca5niowhfohcf" path="res://Images/Icons/fingerprint.webp" id="2_mrleg"]

[node name="LoginPage" type="Node2D"]
script = ExtResource("1_7rm6a")

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 856.0
offset_top = 436.0
offset_right = 1064.0
offset_bottom = 644.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/icon_pressed_color = Color(0.357142, 0.556103, 1, 1)
icon = ExtResource("2_mrleg")

[node name="ProgressBar" type="ProgressBar" parent="Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.279
offset_left = 12.0
offset_top = 214.0
offset_right = -12.0
offset_bottom = -25.032
max_value = 1.0
show_percentage = false

[node name="LoginText" type="RichTextLabel" parent="Button"]
offset_left = -219.0
offset_top = 505.0
offset_right = 449.0
offset_bottom = 604.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/italics_font_size = 64
theme_override_font_sizes/mono_font_size = 64
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
text = "Sign In With Finger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
